--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 </tr>
                 <tr >
                     <td class="p-1 "><span class="font-bold"> Postcode:</span> Ksno </td>
-                    <td class="p-1 "><span class="font-bold"> Date:</span> 2023-11-01  </td>
+                    <td class="p-1 "><span class="font-bold"> Date:</span> <span> 2023-11-01 </span> </td>
 
                   </tr>
                   <tr >
-                    <td  class="p-1 "><span class="font-bold"> Tel No. :</span> Ksno </td>
-                    <td class="p-1 "><span class="font-bold"> Sales Person:</span> 2023-11-01  </td>
+                    <td  class="p-1 "><span class="font-bold"> Tel No. :</span> +1234567890 </td>
+                    <td class="p-1 "><span class="font-bold"> Sales Person:</span> Ewen  </td>
 
                   </tr>
                 
