--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </tr>
                 <tr >
                     <td class="p-1 "><span class="font-bold"> Postcode:</span> Ksno </td>
-                    <td class="p-1 "><span class="font-bold"> Date:</span> <span> 2023-11-01 </span> </td>
+                    <td class="p-1 "><span class="font-bold"> Date:</span> <span class="whitespace-nowrap"> 2023-11-01 </span> </td>
 
                   </tr>
                   <tr >
