--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </table>
     </div>
 
-    <table class="w-full border-separate border-spacing-x-1 text-center ">
+    <table class="w-full border-separate border-spacing-x-1 text-center mb-10">
         <tbody >
             <tr >
                 <td class="border-b-4 border-white  p-1 text-sm whitespace-nowrap" ></td>
