--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         </div>
 
-          <div class="overflow-auto rounded-lg mb-10">
+          <div class="overflow-auto rounded-lg">
             <table class="w-full border-separate border-spacing-x-1 text-center ">
                 <thead>
                     <tr>
@@ -136,7 +136,7 @@
     </table>
     </div>
 
-    <table class="w-full border-separate border-spacing-x-1 text-center mb-10">
+    <table class="w-full border-separate border-spacing-x-1 text-center my-10">
         <tbody >
             <tr >
                 <td class="border-b-4 border-white  p-1 text-sm whitespace-nowrap" ></td>
